2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3229.c:
	  Fix bug #3229.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix some bugs triggered by return values in other than the conventional registers.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in handling of return values in bc.
	* device/lib/clean.mk:
	  Fix clean for r2ka library.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.h,
	  src/stm8/gen.c,
	  src/stm8/peep.c,
	  src/z80/gen.h,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Deduplicate return value handling in peephole optimizer vs code generation.

2021-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/z88dk_callee.c
	  Adapt test for ds390.

2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Code clenaup.

2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3223.c:
	  Fix bug #3223.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/main.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/tests/z88dk_callee.c:
	  __z88dk_callee support for stm8.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/z88dk_callee.c:
	  Implement __z88dk_callee support on callee side.

2021-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Caching of floating literals.

2021-05-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3215.c:
	  Fix condition for skipping test on host.
	* src/z80/gen.c:
	  Improve loading of immediate into register pair.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Another fix for #3220.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>
